Update script name in other files

--- a/ply2las/Dockerfile
+++ b/ply2las/Dockerfile
@@ -28,4 +28,4 @@ CMD ["extractor"]
 ENV RABBITMQ_EXCHANGE="terra" \
     RABBITMQ_VHOST="%2F" \
     RABBITMQ_QUEUE="terra.ply2las" \
-    MAIN_SCRIPT="terra.ply2las.py"
+    MAIN_SCRIPT="terra_ply2las.py"
