--- a/heightmap/CMakeLists.txt
+++ b/heightmap/CMakeLists.txt
@@ -8,5 +8,5 @@ link_directories(${PCL_LIBRARY_DIRS} )
 add_definitions(${PCL_DEFINITIONS}) 
 
 add_executable (heightmap 2DHeightMap.cpp )
-target_link_libraries(main ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_LIBRARIES} ${PCL_KDTREE_LIBRARY} ${PCL_SEARCH_LIBRARY} ${PCL_SURFACE_LIBRARY} ${PCL_FEATURES_LIBRARY}  ${OpenCV_LIBS}) 
+target_link_libraries(heightmap ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_LIBRARIES} ${PCL_KDTREE_LIBRARY} ${PCL_SEARCH_LIBRARY} ${PCL_SURFACE_LIBRARY} ${PCL_FEATURES_LIBRARY}  ${OpenCV_LIBS}) 
 
