--- a/heightmap/Dockerfile
+++ b/heightmap/Dockerfile
@@ -1,39 +1,66 @@
-FROM terraref/terrautils
+FROM ubuntu:14.04
 MAINTAINER Solmaz Hajmohammadi <Solmaz.hajmohammadi@lemanatec.de>
 
 # Install any programs needed
 RUN useradd -u 49044 extractor \
-&& mkdir -p /home/extractor/sites/ua-mac/raw_data \
+    && mkdir -p /home/extractor/sites/ua-mac/raw_data \
     && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop \
     && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop_mergedlas \
     && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop_heightmap \
     && chown -R extractor /home/extractor
 
-RUN mkdir -p /usr/src/app 
-WORKDIR /usr/src/app 
+# Requirements for terrautils
+RUN cd /home/extractor \
+    && apt-get -q -y update \
+    && apt-get install -y --no-install-recommends build-essential \
+        software-properties-common \
+        gcc make wget byacc \
+        libpng-dev \
+        libjpeg8-dev \
+        libfreetype6-dev \
+        libnetcdf-dev \
+        libhdf5-dev \
+        libblas-dev \
+        liblapack-dev \
+        libatlas-base-dev \
+        libgdal-dev \
+        python-dev \
+        python-tk \
+    # Requirements for pyclowder
+        netcat \
+        python \
+        python-pip \
+        git \
+    && add-apt-repository ppa:ubuntugis/ubuntugis-unstable \
+    && apt-get -q -y update \
+    && apt-get install -y python-gdal \
+    && pip install --upgrade setuptools \
+    && rm -rf /var/lib/apt/lists/*
+# Install pyclowder and terrautils
+RUN cd /home/extractor \
+    && git clone https://opensource.ncsa.illinois.edu/bitbucket/scm/cats/pyclowder2.git \
+    && pip install --upgrade -r pyclowder2/requirements.txt \
+    && pip install --upgrade /home/extractor/pyclowder2 \
+    && git clone https://github.com/terraref/terrautils.git \
+    && pip install --upgrade -r terrautils/requirements.txt \
+    && pip install --upgrade /home/extractor/terrautils
+
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
 # Various Python and C/build deps
-RUN apt-get update && apt-get install -y \ 
+RUN apt-get update \
+    && apt-get install -y \
         wget \
-        build-essential \
         cmake \
-        git \
         unzip \
         pkg-config \
-        python-dev \
-        python-opencv \
-        python-pip \
         libopencv-dev \
         libav-tools  \
         libjpeg-dev \
-        libjpeg8-dev \
-        libpng-dev \
-        libpng12-dev \
         libtiff-dev \
         libjasper-dev \
         libgtk2.0-dev \
-        libhdf5-dev \
-        numpy \
         python-numpy \
         python-pycurl \
         libatlas-base-dev \
@@ -42,11 +69,64 @@ RUN apt-get update && apt-get install -y \
         python-opencv \
         qt5-default \
         libvtk6-dev \
-        zlib1g-dev \
+        zlib1g-dev
+
+# Install Open CV - Warning, this takes absolutely forever
+RUN mkdir -p ~/opencv cd ~/opencv \
+    && wget https://github.com/Itseez/opencv/archive/3.0.0.zip \
+    && unzip 3.0.0.zip \
+    && rm 3.0.0.zip \
+    && mv opencv-3.0.0 OpenCV \
+    && cd OpenCV \
+    && mkdir build \
+    && cd build \
+    && cmake \
+        -DWITH_QT=ON \
+        -DWITH_OPENGL=ON \
+        -DFORCE_VTK=ON \
+        -DWITH_TBB=ON \
+        -DWITH_GDAL=ON \
+        -DWITH_XINE=ON \
+        -DBUILD_EXAMPLES=ON .. \
+    && make -j4 \
+    && make install \
+    && ldconfig
+
+RUN apt-get update && apt-get upgrade -y \
+    && apt-get install -y \
+        libpng12-dev \
         libavcodec-dev \
         libavformat-dev \
         libswscale-dev \
         libv4l-dev \
+    && pip install --upgrade pip \
+    && pip install virtualenv virtualenvwrapper numpy \
+    && rm -rf ~/.cache/pip \
+    && apt-get autoclean && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+RUN cd ~ \
+    && git clone https://github.com/Itseez/opencv.git \
+    && cd opencv \
+    && pwd \
+    && git checkout 3.1.0 \
+    && cd ~ \
+    && git clone https://github.com/Itseez/opencv_contrib.git \
+    && cd opencv_contrib \
+    && git checkout 3.1.0 \
+    && cd /root/opencv \
+    && mkdir build \
+    && cd build \
+    && cmake -D CMAKE_BUILD_TYPE=RELEASE  -D CMAKE_INSTALL_PREFIX=/usr/local  -D INSTALL_C_EXAMPLES=OFF  -D INSTALL_PYTHON_EXAMPLES=ON  -D OPENCV_EXTRA_MODULES_PATH=/root/opencv_contrib/modules -D BUILD_EXAMPLES=ON ..
+
+RUN cd ~/opencv/build \
+    && make -j $(nproc) \
+    && make install \
+    && ldconfig \
+    && cp ~/opencv/build/lib/cv2.so /usr/local/lib/python2.7/dist-packages/
+
+RUN apt-get update \
+    && apt-get install -y \
         ca-certificates \
         apparmor \
         aufs-tools \
@@ -64,62 +144,16 @@ RUN apt-get update && apt-get install -y \
         python-websocket \
         vim \
         software-properties-common \
-        --no-install-recommends && \
-    apt-get autoclean && apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-RUN add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl && \
-    apt-get update && \
-    apt-get install -y libpcl-all
+    --no-install-recommends
 
-RUN pip install --upgrade pip \
-        virtualenv \
-        virtualenvwrapper \
-        cython \
-        numpy \
-        git+https://github.com/strawlab/python-pcl.git#egg=pcl && \
-    rm -rf ~/.cache/pip
+RUN add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl \
+    && apt-get update \
+    && apt-get install -y libpcl-all
 
-# Install Open CV - Warning, this takes absolutely forever
-RUN mkdir -p ~/opencv cd ~/opencv && \
-    wget https://github.com/Itseez/opencv/archive/3.0.0.zip && \
-    unzip 3.0.0.zip && \
-    rm 3.0.0.zip && \
-    mv opencv-3.0.0 OpenCV && \
-    cd OpenCV && \
-    mkdir build && \ 
-    cd build && \
-    cmake \
-    -DWITH_QT=ON \ 
-    -DWITH_OPENGL=ON \ 
-    -DFORCE_VTK=ON \
-    -DWITH_TBB=ON \
-    -DWITH_GDAL=ON \
-    -DWITH_XINE=ON \
-    -DBUILD_EXAMPLES=ON .. && \
-    make -j4 && \
-    make install && \ 
-    ldconfig
-RUN cd ~ && \
-    git clone https://github.com/Itseez/opencv.git && \
-    cd opencv && \
-    pwd && \
-    git checkout 3.1.0 && \ 
-    cd ~ && \
-    git clone https://github.com/Itseez/opencv_contrib.git && \ 
-    cd opencv_contrib && \
-    git checkout 3.1.0 && \
-    cd /root/opencv && \
-    mkdir build && \
-    cd build && \
-    cmake -D CMAKE_BUILD_TYPE=RELEASE  -D CMAKE_INSTALL_PREFIX=/usr/local  -D INSTALL_C_EXAMPLES=OFF  -D INSTALL_PYTHON_EXAMPLES=ON  -D OPENCV_EXTRA_MODULES_PATH=/root/opencv_contrib/modules -D BUILD_EXAMPLES=ON ..
-RUN cd ~/opencv/build && \
-    make -j $(nproc) && \
-    make install && \
-    ldconfig && \
-    cp ~/opencv/build/lib/cv2.so /usr/local/lib/python2.7/dist-packages/ 
+RUN pip install cython numpy git+https://github.com/strawlab/python-pcl.git#egg=pcl
 
 # command to run when starting docker
-COPY entrypoint.sh extractor_info.json *.py main *.cpp heightmap PCLDLL.h /home/extractor/
+COPY entrypoint.sh extractor_info.json *.py *.cpp main heightmap PCLDLL.h CMakeLists.txt /home/extractor/
 
 USER extractor
 ENTRYPOINT ["/home/extractor/entrypoint.sh"]
@@ -133,4 +167,4 @@ ENV RABBITMQ_EXCHANGE="terra" \
     RABBITMQ_VHOST="%2F" \
     RABBITMQ_QUEUE="terra.3dscanner.heightmap" \
     RABBITMQ_URI="" \
-MAIN_SCRIPT="terra_heightmap.py"
+    MAIN_SCRIPT="terra_heightmap.py"
