--- a/plant_height/Dockerfile
+++ b/plant_height/Dockerfile
@@ -2,15 +2,15 @@ FROM terraref/terrautils
 MAINTAINER Max Burnette <mburnet2@illinois.edu>
 
 # Create user with necessary user ID for writing permissions on Roger
-RUN useradd -u 49044 extractor \
-    && mkdir -p /home/extractor/sites/ua-mac/raw_data \
-    && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop_plant_height \
-    && chown -R extractor /home/extractor
+#RUN useradd -u 49044 extractor \
+#    && mkdir -p /home/extractor/sites/ua-mac/raw_data \
+#    && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop_plant_height \
+#    && chown -R extractor /home/extractor
 
 # command to run when starting docker
 COPY entrypoint.sh extractor_info.json *.py /home/extractor/
 
-USER extractor
+#USER extractor
 ENTRYPOINT ["/home/extractor/entrypoint.sh"]
 CMD ["extractor"]
 
