--- a/heightmap/Dockerfile
+++ b/heightmap/Dockerfile
@@ -146,11 +146,13 @@ RUN add-apt-repository ppa:v-launchpad-jochen-sprickerhof-de/pcl \
 RUN pip install -U requests[security] pyopenssl ndg-httpsclient pyasn1 cython
 RUN pip install numpy git+http://github.com/strawlab/python-pcl.git#egg=pcl
 
-# Install pyclowder and terrautils
+# Install pyclowder
 RUN cd /home/extractor \
     && git clone https://opensource.ncsa.illinois.edu/bitbucket/scm/cats/pyclowder2.git \
     && pip install --upgrade -r pyclowder2/requirements.txt \
-    && pip install --upgrade /home/extractor/pyclowder2 \
+    && pip install --upgrade /home/extractor/pyclowder2
+# Install terrautils
+RUN cd /home/extractor \
     && git clone https://github.com/terraref/terrautils.git \
     && cd terrautils && git checkout terrautils_final_prep && cd .. \
     && pip install --upgrade -r terrautils/requirements.txt \
