--- a/ply2las/Dockerfile
+++ b/ply2las/Dockerfile
@@ -2,7 +2,7 @@ FROM pdal/pdal:1.5
 MAINTAINER Max Burnette <mburnet2@illinois.edu>
 
 # Install any programs needed
-RUN useradd -u 47852 extractor \
+RUN useradd -u 49044 extractor \
     && mkdir -p /home/extractor/sites/ua-mac/raw_data \
     && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop \
     && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop_mergedlas \
@@ -44,7 +44,8 @@ RUN cd /home/extractor \
 RUN cd /home/extractor \
     && git clone https://github.com/terraref/terrautils.git \
     && pip install --upgrade -r terrautils/requirements.txt \
-    && pip install --upgrade /home/extractor/terrautils
+    && pip install --upgrade /home/extractor/terrautils \
+    && pip install laspy
 
 # command to run when starting docker
 COPY entrypoint.sh extractor_info.json *.py /home/extractor/
