update heightmap to use PLY2TIF code

--- a/heightmap/Dockerfile
+++ b/heightmap/Dockerfile
@@ -14,10 +14,12 @@ RUN pip install laspy plyfile terraref-laser3d
 
 # Install Wine
 RUN dpkg --add-architecture i386 \
-    && wget -nc https://dl.winehq.org/wine-builds/Release.key \
-    && apt-key add Release.key \
-    && apt-add-repository https://dl.winehq.org/wine-builds/ubuntu/ \
     && apt update \
+    && echo ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true | debconf-set-selections \
+    && apt-get install -y ttf-mscorefonts-installer \
+    && wget -nc http://dl.winehq.org/wine-builds/Release.key \
+    && apt-key add Release.key \
+    && apt-add-repository http://dl.winehq.org/wine-builds/ubuntu/ \
     && apt install -y wine \
     && rm -rf /var/lib/apt/lists/*
 
@@ -25,11 +27,8 @@ RUN dpkg --add-architecture i386 \
 RUN apt-get update \
     && apt-get install -y pdal
 
-# Download lastools
-RUN wget http://lastools.org/download/lastools.zip && unzip lastools.zip
-
 # command to run when starting docker
-COPY entrypoint.sh extractor_info.json *.py *.cpp main PCLDLL.h CMakeLists.txt /home/extractor/
+COPY entrypoint.sh extractor_info.json *.py /home/extractor/
 
 USER extractor
 ENTRYPOINT ["/home/extractor/entrypoint.sh"]
