--- a/ply2las/Dockerfile
+++ b/ply2las/Dockerfile
@@ -2,11 +2,7 @@ FROM terraref/terrautils:1.2
 MAINTAINER Max Burnette <mburnet2@illinois.edu>
 
 # Install any programs needed
-RUN useradd -u 49044 extractor \
-    && mkdir -p /home/extractor/sites/ua-mac/raw_data \
-    && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop \
-    && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop_mergedlas \
-    && chown -R extractor /home/extractor
+RUN useradd -u 49044 extractor
 
 # Install laser3d science package
 RUN pip install laspy plyfile terraref-laser3d
@@ -25,4 +21,6 @@ CMD ["extractor"]
 ENV RABBITMQ_EXCHANGE="terra" \
     RABBITMQ_VHOST="%2F" \
     RABBITMQ_QUEUE="terra.3dscanner.ply2las" \
-    MAIN_SCRIPT="terra_ply2las.py"
+    MOUNTED_PATHS='{"home/clowder/sites":"/home/extractor/sites"}' \
+    MAIN_SCRIPT="terra_ply2las.py" \
+    CLOWDER_SPACE="5bdc8f174f0cb2fdaaf3148e"
