--- a/las2height/Dockerfile
+++ b/las2height/Dockerfile
@@ -1,11 +1,11 @@
 FROM terraref/terrautils:1.4
 MAINTAINER Max Burnette <mburnet2@illinois.edu>
 
-# Create user with necessary user ID for writing permissions on Roger
-#RUN useradd -u 49044 extractor \
-#    && mkdir -p /home/extractor/sites/ua-mac/raw_data \
-#    && mkdir -p /home/extractor/sites/ua-mac/Level_1/scanner3DTop_plant_height \
-#    && chown -R extractor /home/extractor
+# Install any programs needed
+RUN useradd -u 49044 extractor
+
+# Install laser3d science package
+RUN pip install laspy
 
 # command to run when starting docker
 COPY entrypoint.sh extractor_info.json *.py /home/extractor/
